--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
+body{
+  background-color: #23272F;
+  color: #23272F;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::selection{
+  background-color: #087EA4;
+  color: #fff;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-control{
+  border: 2px solid #087EA4; 
+  color: #23272F;
+  background-color: #f5f5f5; 
+  padding: 10px;
+  border-radius: 5px;
+  width: 93%;
+  resize: none; 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-control:focus {
+  border-color: #087EA4;
+  box-shadow: 5px 10px 20px rgba(66, 135, 245, 0.5);
+  outline: none; 
+}
+select {
+  appearance: none;
+}
+.container {
+  background-color: #23272F;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 3px 5px 20px #087EA4;
+}
+.div{
+  background-color: #f5f5f5;
+}
+.buttons {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.btn {
+  padding: 10px 10px;
+  border-radius: 10px;
+  background-color: #087EA4;
+  border: none;
+  color: #f5f5f5;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.btn:hover{
+  border: 1px solid #23272F;
+  cursor: pointer;
+}
+.btn-danger {
+  padding: 10px 10px;
+  border-radius: 10px;
+  background-color: #ff6b6b;
+  border-color: #ff0000;
+  color: #fff;
+}
+.btn-warning {
+  padding: 10px 10px;
+  border-radius: 10px;
+  background-color: #ffc107;
+  border-color: #ffc107;
+  color: #fff;
+}
+#textColor {
+  width: 170px;
+  height: 30px;
+  padding: 0;
+  border: none;
+  max-width: 110%;
+}
+#fontFamily, #fontSize {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+.my-3 {
+  margin-top: 20px;
+}
+h1 {
+  font-family: 'Finger Paint', cursive;
+  margin-top: 0%;
+  color: #fff;
+  font-size: 50px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 400;
+  animation: glow 0.50s ease-in-out infinite alternate-reverse;
+}
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 5px #087EA4, 0 0 10px #087EA4, 0 0 15px #087EA4, 0 0 20px #087EA4;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    text-shadow: 0 0 10px #087EA4, 0 0 20px #087EA4, 0 0 30px #087EA4, 0 0 40px #087EA4;
+  }
+  100% {
+    text-shadow: 0 0 5px #087EA4, 0 0 10px #087EA4, 0 0 15px #087EA4, 0 0 20px #087EA4;
+  }
+}
+#fontSize {
+  max-height: 0px;
+}
+#fontFamily {
+  max-width: 130px;
+}
+input{
+  max-width: 25px;
+  background-color: #087EA4;
+  border: 1px solid #087EA4;
+  color: #f5f5f5;
+}
+input:focus{
+  border: 1px solid #23272F;
+}
+.swal2-popup {
+  background-color: #23272F; 
+  border: 2px solid #087EA4;
+  border-radius: 20px;
+  color: #087EA4;
+}
+.custom-swal-confirm-button {
+  background-color: #087EA4 !important;
+  border: 1px solid #23272F !important;
+  color: #fff !important;
+}
+.swal2-confirm:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border: none !important;
+}
+
+
+@media (max-width:300px){
+  #textColor {
+    width: 90px;
   }
 }
